--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/EpicMountainRewards/320x50_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/EpicMountainRewards/320x50_EpicMountainRewards.htm
@@ -204,7 +204,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#99bbd5";
+            ctx.fillStyle = "#EE6B0A";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
