--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
@@ -207,7 +207,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#009CDE";
+            ctx.fillStyle = "#939598";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
