--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Stowe/320x50_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Stowe/320x50_Stowe.htm
@@ -213,7 +213,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#ba0c2f";
+            ctx.fillStyle = "#384851";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
