--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/Vail/728x90_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/Vail/728x90_Vail.htm
@@ -32,7 +32,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #4097d6;
+        color: #009ada;
         background-color: #fff;
       }
       .frame {
@@ -143,7 +143,7 @@
             // ref: 'ref.png'
             logoImage: './../images/728x90_Vail_Resort_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#4097d6^#125789',
+            ctaBtnColor: '#009ada^#006b98',
           },
           beforeLoad: function(data){
             data.map(function(content){
