--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/MultiResort/970x250_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/MultiResort/970x250_MultiResort.htm
@@ -41,15 +41,15 @@
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:rgba(120, 149, 181, 1);top:-198px;"></div>
+      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:rgba(120, 149, 181, 0);top:-198px;"></div>
       <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:rgba(120, 149, 181, 1);"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
-      <div id="logoImage" class="asset frame" data-image="logoImage" style="width:335px;height:52px;"></div>
+      <div id="logoImage" class="asset frame" data-image="logoImage" style="width:335px;height:52px;left:620px;"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left AvenirNextRegular"
         data-text="frameText1"
-        style="top: 27px;
+        style="top: 60px;
           left: 623px;
           width: 320px;
           height: 100px;
@@ -59,7 +59,7 @@
       </div>
       <div id="frameText2" class="text-left AvenirNextRegular"
         data-text="frameText2"
-        style="top: 27px;
+        style="top: 60px;
           left: 623px;
           width: 320px;
           height: 100px;
@@ -69,7 +69,7 @@
       </div>
       <div id="frameText3" class="text-left AvenirNextRegular"
         data-text="frameText3"
-        style="top: 27px;
+        style="top: 60px;
           left: 623px;
           width: 320px;
           height: 100px;
