--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/MultiResort/160x600_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/MultiResort/160x600_MultiResort.htm
@@ -47,8 +47,9 @@
       <div id="logoImage" class="asset frame" data-image="logoImage" style="width:160px;height:45px;"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left AvenirNextRegular"
+      <div id="frameText1" class="text AvenirNextRegular"
         data-text="frameText1"
+        data-style="text-align:center;"
         style="top: 457px;
           left: 15px;
           width: 130px;
@@ -57,8 +58,9 @@
           letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text-left AvenirNextRegular"
+      <div id="frameText2" class="text AvenirNextRegular"
         data-text="frameText2"
+        data-style="text-align:center;"
         style="top: 457px;
           left: 15px;
           width: 130px;
@@ -67,8 +69,9 @@
           letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text-left AvenirNextRegular"
+      <div id="frameText3" class="text AvenirNextRegular"
         data-text="frameText3"
+        data-style="text-align:center;"
         style="top: 457px;
           left: 15px;
           width: 130px;
@@ -172,7 +175,7 @@
                 }
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
-                  frameText[i].style.textAlign = 'center';
+                  // frameText[i].style.textAlign = 'center';
                 }
               }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
