--- a/M/Microsoft/MicrosoftAzure/MicrosoftAzure_ Background Refresh/ads/728x90/728x90.html
+++ b/M/Microsoft/MicrosoftAzure/MicrosoftAzure_ Background Refresh/ads/728x90/728x90.html
@@ -52,8 +52,8 @@
           letter-spacing:-0.2px;
           color:#000;">
           <span>
-            <font style="display:inline-block;min-height:24px;padding-bottom:5px;">!{headline}</font><br class="breakline">
-            <font style="display:inline-block;font-size:68%;">!{subHeadline}</font>
+            <font id="headlineText" style="display:inline-block;min-height:24px;padding-bottom:5px;">!{headline}</font><br class="breakline">
+            <font id="subHeadlineText" style="display:inline-block;font-size:68%;">!{subHeadline}</font>
           </span>
       </div>
       <!-- <div id="subHeadline" class="text-left segoeProSemibold"
@@ -156,15 +156,15 @@
             if(trackingCode.length){ impressionTrackerAAM = impressionTrackerAAM.replace('$(t_qp_TC_5)', trackingCode); }
             ad.loadAssets(impressionTrackerAAM, function(assets){ });
           }
-          if(adData['subHeadline'].toLowerCase() == 'na' || adData['headline'].toLowerCase() == 'na' || adData['subHeadline'].toLowerCase() == '&#32;') {
+          if(adData['subHeadline'].toLowerCase() == 'na' || adData['headline'].toLowerCase() == 'na' || adData['subHeadline'].toLowerCase() == '&#32;' || ad.root.querySelector('#subHeadlineText').textContent === '' || adData['subHeadline'].toLowerCase() == ' ') {
             var breakline = ad.layers.headline.querySelector('.breakline');
             if(breakline) { ad.layers.headline.querySelector('span').removeChild(breakline);}
           }
-          if(adData['subHeadline'].toLowerCase() == 'na' || adData['subHeadline'].toLowerCase() == '&#32;') {
+          if(adData['subHeadline'].toLowerCase() == 'na' || adData['subHeadline'].toLowerCase() == '&#32;' || ad.root.querySelector('#subHeadlineText').textContent === '' || adData['subHeadline'].toLowerCase() == ' ') {
             ad.layers.headline.querySelector('span font:nth-child(2)').style.display = 'none';
             ad.layers.headline.style.top = ((ad.layers.headline.querySelector('span').offsetHeight - ad.layers.headline.querySelector('font').offsetHeight)/2) + 'px';
+            ad.root.querySelector('#headlineText').style.paddingBottom = '0';
           }
-          
           // ad.layers.cta.style.backgroundColor = '#ff0000';
         });
       }, 1000);
