--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Heavenly/320x50_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Heavenly/320x50_Heavenly.htm
@@ -129,7 +129,7 @@
             // ref: 'ref.png'
             logoImage: './../images/320x50_Heavenly_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#cc2131^#79131c',
+            ctaBtnColor: '#cb1f30^#79131c',
           },
           beforeLoad: function(data){
             data.map(function(content){
