--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Heavenly/160x600_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Heavenly/160x600_Heavenly.htm
@@ -132,7 +132,7 @@
             // ref: 'ref.png'
             logoImage: './../images/160x600_Heavenly_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#cc2131^#79131c',
+            ctaBtnColor: '#cb1f30^#79131c',
           },
           beforeLoad: function(data){
             data.map(function(content){
