--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Heavenly/970x250_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Heavenly/970x250_Heavenly.htm
@@ -130,7 +130,7 @@
             // ref: 'ref.png'
             logoImage: './../images/970x250_Heavenly_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#cc2131^#79131c',
+            ctaBtnColor: '#cb1f30^#79131c',
           },
           beforeLoad: function(data){
             data.map(function(content){
