--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/SevenSprings/728x90_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/SevenSprings/728x90_SevenSprings.htm
@@ -27,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #373e56;
+        color: #113451;
         background-color: #fff;
       }
       .frame {
@@ -214,7 +214,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#F8951F";
+            ctx.fillStyle = "#113451";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
