--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/SevenSprings/300x250_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/SevenSprings/300x250_SevenSprings.htm
@@ -58,7 +58,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left MontserratExtraBold"
@@ -68,7 +68,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left MontserratExtraBold"
@@ -78,7 +78,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text MontserratExtraBold"
