--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
@@ -19,6 +19,11 @@
         font-weight: 400;
         font-style: normal;
       }
+      .OpenSansCondensedBold {
+        font-family: open-sans-condensed,sans-serif;
+        font-weight: 700;
+        font-style: normal;
+      }
       .GillSansNovaBook{
         font-family: gill-sans-nova,sans-serif;
         font-weight: 400;
@@ -56,7 +61,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text TradeGothicNextLTProCondensed"
+      <div id="frameText1" class="text OpenSansCondensedBold"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 464px;
@@ -64,10 +69,10 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text TradeGothicNextLTProCondensed"
+      <div id="frameText2" class="text OpenSansCondensedBold"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 464px;
@@ -75,10 +80,10 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text TradeGothicNextLTProCondensed"
+      <div id="frameText3" class="text OpenSansCondensedBold"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 464px;
@@ -86,7 +91,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text GillSansNovaBook"
@@ -105,7 +110,8 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="TradeGothicNextLTProCondensed">TradeGothicNextLTProCondensed</div>
+      <!-- <div class="TradeGothicNextLTProCondensed">TradeGothicNextLTProCondensed</div> -->
+      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
       <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
       <div class="GillSansNovaBook">GillSansNovaBook</div>
     </div>
