--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
@@ -60,7 +60,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text MontserratBold"
@@ -71,7 +71,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text MontserratBold"
@@ -82,7 +82,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="cta" class="text OpenSansCondensedBold"
