--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/SevenSprings/300x250_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/SevenSprings/300x250_SevenSprings.htm
@@ -59,7 +59,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left MontserratExtraBold"
@@ -69,7 +69,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left MontserratExtraBold"
@@ -79,7 +79,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text MontserratExtraBold"
