--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
@@ -19,6 +19,11 @@
         font-weight: 400;
         font-style: normal;
       }
+      .OpenSansCondensedBold {
+        font-family: open-sans-condensed,sans-serif;
+        font-weight: 700;
+        font-style: normal;
+      }
       .GillSansNovaBook{
         font-family: gill-sans-nova,sans-serif;
         font-weight: 400;
@@ -57,7 +62,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text TradeGothicNextLTProCondensed"
+      <div id="frameText1" class="text OpenSansCondensedBold"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 460px;
@@ -65,10 +70,10 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text TradeGothicNextLTProCondensed"
+      <div id="frameText2" class="text OpenSansCondensedBold"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 460px;
@@ -76,10 +81,10 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text TradeGothicNextLTProCondensed"
+      <div id="frameText3" class="text OpenSansCondensedBold"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 460px;
@@ -87,7 +92,7 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text GillSansNovaBook"
