--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Vail/970x250_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Vail/970x250_Vail.htm
@@ -19,6 +19,11 @@
         font-weight: 400;
         font-style: normal;
       }
+      .OpenSansCondensedBold {
+        font-family: open-sans-condensed,sans-serif;
+        font-weight: 700;
+        font-style: normal;
+      }
       .GillSansNovaBook{
         font-family: gill-sans-nova,sans-serif;
         font-weight: 400;
@@ -57,34 +62,34 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left TradeGothicNextLTProCondensed"
+      <div id="frameText1" class="text-left OpenSansCondensedBold"
         data-text="frameText1"
         style="top: 50px;
           left: 623px;
           width: 220px;
           height: 130px;
           font-size: 34px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.02em;
           line-height: 1.13;">
       </div>
-      <div id="frameText2" class="text-left TradeGothicNextLTProCondensed"
+      <div id="frameText2" class="text-left OpenSansCondensedBold"
         data-text="frameText2"
         style="top: 50px;
           left: 623px;
           width: 220px;
           height: 130px;
           font-size: 34px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.02em;
           line-height: 1.13;">
       </div>
-      <div id="frameText3" class="text-left TradeGothicNextLTProCondensed"
+      <div id="frameText3" class="text-left OpenSansCondensedBold"
         data-text="frameText3"
         style="top: 50px;
           left: 623px;
           width: 220px;
           height: 130px;
           font-size: 34px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.02em;
           line-height: 1.13;">
       </div>
       <div id="cta" class="text GillSansNovaBook"
@@ -104,8 +109,9 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="TradeGothicNextLTProCondensed">TradeGothicNextLTProCondensed</div>
+      <!-- <div class="TradeGothicNextLTProCondensed">TradeGothicNextLTProCondensed</div> -->
       <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
+      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
       <div class="GillSansNovaBook">GillSansNovaBook</div>
     </div>
     <script type="text/javascript">
