--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Vail/320x50_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Vail/320x50_Vail.htm
@@ -91,7 +91,7 @@
           letter-spacing: 0.02em;
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text GillSansNovaBook"
+      <div id="cta" class="text OpenSansCondensedBold"
         data-text="ctaText"
         data-style="padding:0 6px 0px;"
         style="top: 17px;
@@ -101,7 +101,6 @@
           font-size: 8px;
           line-height: 10px;
           letter-spacing: 0.5px;
-          border-radius: 12px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -147,7 +146,7 @@
             // ref: 'ref.png'
             logoImage: './../images/320x50_Vail_Resort_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#3968b1^#125789',
+            ctaBtnColor: '#3968b1^#000000',
           },
           beforeLoad: function(data){
             data.map(function(content){
