--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Vail/970x250_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Vail/970x250_Vail.htm
@@ -91,7 +91,7 @@
           letter-spacing: 0.02em;
           line-height: 1.13;">
       </div>
-      <div id="cta" class="text GillSansNovaBook"
+      <div id="cta" class="text OpenSansCondensedBold"
         data-text="ctaText"
         data-style="padding:0 20px 1px;"
         style="top: 193px;
@@ -102,7 +102,6 @@
           font-size: 16px;
           line-height: 22px;
           letter-spacing: 0.2em;
-          border-radius: 20px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -148,7 +147,7 @@
             // ref: 'ref.png'
             logoImage: './../images/970x250_Vail_Resort_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#3968b1^#125789',
+            ctaBtnColor: '#3968b1^#000000',
           },
           beforeLoad: function(data){
             data.map(function(content){
