--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/Vail/160x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/Vail/160x600_Vail.htm
@@ -95,7 +95,7 @@
           letter-spacing: 0.02em;
           line-height: 1.3;">
       </div>
-      <div id="cta" class="text GillSansNovaBook"
+      <div id="cta" class="text OpenSansCondensedBold"
         data-text="ctaText"
         data-style="text-align:center;padding:0 8px 1px;"
         style="top: 545px;
@@ -105,7 +105,6 @@
           font-size: 12px;
           line-height: 20px;
           letter-spacing: 1.1px;
-          border-radius: 15px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -152,7 +151,7 @@
             // ref: 'ref.png'
             logoImage: './../images/160x600_Vail_Resort_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#3968b1^#125789',
+            ctaBtnColor: '#3968b1^#000000',
           },
           beforeLoad: function(data){
             data.map(function(content){
