--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/Vail/728x90_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/Vail/728x90_Vail.htm
@@ -92,7 +92,7 @@
           letter-spacing: 0.02em;
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text GillSansNovaBook"
+      <div id="cta" class="text OpenSansCondensedBold"
         data-text="ctaText"
         data-style="padding:0 10px 1px;"
         style="top: 29px;
@@ -102,7 +102,6 @@
           font-size: 12px;
           line-height: 20px;
           letter-spacing: 1.1px;
-          border-radius: 12px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -149,7 +148,7 @@
             // ref: 'ref.png'
             logoImage: './../images/728x90_Vail_Resort_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#3968b1^#125789',
+            ctaBtnColor: '#3968b1^#000000',
           },
           beforeLoad: function(data){
             data.map(function(content){
