--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
@@ -95,7 +95,7 @@
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text GillSansNovaBook"
+      <div id="cta" class="text OpenSansCondensedBold"
         data-text="ctaText"
         data-style="padding:0 12px 2px;"
         style="top: 542px;
@@ -105,7 +105,6 @@
           font-size: 14px;
           line-height: 20px;
           letter-spacing: 2.2px;
-          border-radius: 15px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -151,7 +150,7 @@
             // ref: 'ref.png'
             logoImage: './../images/300x600_Vail_Resort_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#3968b1^#006b98',
+            ctaBtnColor: '#3968b1^#000000',
           },
           beforeLoad: function(data){
             data.map(function(content){
