--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Vail/160x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Vail/160x600_Vail.htm
@@ -103,7 +103,7 @@
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
