--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Breckenridge/970x250_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Breckenridge/970x250_Breckenridge.htm
@@ -93,7 +93,7 @@
           font-size: 18px;
           line-height: 22px;
           letter-spacing: 0.05em;
-          /*border-radius: 20px;*/
+          border-radius: 20px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
