--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Breckenridge/300x600_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Breckenridge/300x600_Breckenridge.htm
@@ -46,8 +46,9 @@
       <div id="backgroundImage1" style="top: 65px;width: 300px; height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 65px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 65px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-534px;background-color:rgba(0, 76, 128, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(0, 76, 128, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-534px;background-color:rgba(215, 25, 32, 1.0);"></div>
+      <!-- <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(0, 76, 128, 1.0);"></div> -->
+      <div id="bottomWhitePatch" class="asset-top frame" style="top:453px;" data-image="bottomWhitePatch"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
@@ -95,7 +96,7 @@
           font-size: 14px;
           line-height: 20px;
           letter-spacing: 0.05em;
-          /*border-radius: 15px;*/
+          border-radius: 15px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -142,6 +143,7 @@
             logoImage: './../images/300x600_Breckenridge_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#d71920^#960c11',
+            bottomWhitePatch: './../images/Breck_HighFiveCampaign_TextBox_DisplayBackground_300x600.jpg'
           },
           beforeLoad: function(data){
             data.map(function(content){
