--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Breckenridge/970x250_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Breckenridge/970x250_Breckenridge.htm
@@ -46,8 +46,9 @@
       <div id="backgroundImage1" style="width: auto; height: 250px;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="width: auto; height: 250px;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="width: auto; height: 250px;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:rgba(0, 76, 128, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:rgba(0, 76, 128, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:rgba(215, 25, 32, 1.0);"></div>
+      <!-- <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:rgba(0, 76, 128, 1.0);"></div> -->
+      <div id="bottomWhitePatch" class="asset-left frame" style="left:596px;" data-image="bottomWhitePatch"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
@@ -93,7 +94,7 @@
           font-size: 18px;
           line-height: 22px;
           letter-spacing: 0.05em;
-          /*border-radius: 20px;*/
+          border-radius: 20px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -140,6 +141,7 @@
             logoImage: './../images/970x250_Breckenridge_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#d71920^#960c11',
+            bottomWhitePatch: './../images/Breck_HighFiveCampaign_TextBox_DisplayBackground_970x250.jpg'
           },
           beforeLoad: function(data){
             data.map(function(content){
