--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Breckenridge/300x600_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Breckenridge/300x600_Breckenridge.htm
@@ -88,7 +88,7 @@
       </div>
       <div id="cta" class="text PoppinsBold"
         data-text="ctaText"
-        data-style="padding:0 12px 0px;"
+        data-style="padding:3px 12px 0px;"
         style="top: 542px;
           left: 97px;
           width: 108px;
@@ -177,7 +177,7 @@
                 cta.style.width = "auto";
                 cta.style.minWidth = "120px";
                 cta.style.maxWidth = "145px";
-                cta.dataset.style = 'padding:0px 8px 0px;';
+                cta.dataset.style = 'padding:3px 8px 0px;';
                 cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
                 cta.style.width = cta.offsetWidth + 'px';
               }
