--- a/E/Epic/EpicPass_Template_15/ads/728x90/728x90.html
+++ b/E/Epic/EpicPass_Template_15/ads/728x90/728x90.html
@@ -310,6 +310,7 @@
               ad.layers.cta.classList.remove('shine');
             });
           }
+          gsap.set('#introLogoImage', {transformOrigin: '46% 23%'});
           gsap.set('#cta, #frameVideo2, #logoImage, #frameText2, #frameVideo3, #frameText3, #frameText4', {autoAlpha:0});
           gsap.set('#logoImage', {y: 20});
           gsap.set('#cta', {x: 20});
