--- a/E/Epic/EpicPass_Template_15/ads/300x600/300x600.html
+++ b/E/Epic/EpicPass_Template_15/ads/300x600/300x600.html
@@ -308,6 +308,7 @@
               ad.layers.cta.classList.remove('shine');
             });
           }
+          gsap.set('#introLogoImage', {transformOrigin: '34% 47.5%'});
           gsap.set('#cta, #frameVideo2, #logoImage, #frameText2, #frameVideo3, #frameText3, #frameText4', {autoAlpha:0});
           gsap.set('#logoImage, #cta', {y: 20});
           gsap.set('#frameText2 v, #frameText3 v, #frameText4 v', {y: '100%'});
