--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
@@ -14,6 +14,11 @@
         font-weight: 900;
         font-style: normal;
       }
+      .MontserratBold {
+        font-family: "montserrat", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+      }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -41,12 +46,12 @@
       <div id="backgroundImage1" style="top: 44px;width: 160px;height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 44px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 44px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:rgba(204, 0, 0, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:rgba(0, 0, 0, 1.0);"></div>
       <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(0, 0, 0, 1.0);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text MontserratBlack"
+      <div id="frameText1" class="text MontserratBold"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 457px;
@@ -57,7 +62,7 @@
           /* letter-spacing: 1.6px; */
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text MontserratBlack"
+      <div id="frameText2" class="text MontserratBold"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 457px;
@@ -68,7 +73,7 @@
           /* letter-spacing: 1.6px; */
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text MontserratBlack"
+      <div id="frameText3" class="text MontserratBold"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 457px;
@@ -79,7 +84,7 @@
           /* letter-spacing: 1.6px; */
           line-height: 1.3;">
       </div>
-      <div id="cta" class="text MontserratBlack"
+      <div id="cta" class="text MontserratBold"
         data-text="ctaText"
         data-style="text-align:center;padding:0 8px 0px;"
         style="top: 545px;
@@ -95,7 +100,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratBlack">MontserratBlack</div>
+      <div class="MontserratBold">MontserratBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
