--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/WhistlerBlackcomb/970x250_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/WhistlerBlackcomb/970x250_WhistlerBlackcomb.htm
@@ -14,6 +14,11 @@
         font-weight: 900;
         font-style: normal;
       }
+      .MontserratBold {
+        font-family: "montserrat", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+      }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -41,12 +46,12 @@
       <div id="backgroundImage1" style="width: auto; height: 250px;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="width: auto; height: 250px;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="width: auto; height: 250px;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:rgba(204, 0, 0, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:rgba(0, 0, 0, 1.0);"></div>
       <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:rgba(0, 0, 0, 1.0);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratBlack"
+      <div id="frameText1" class="text-left MontserratBold"
         data-text="frameText1"
         style="top: 70px;
           left: 623px;
@@ -56,7 +61,7 @@
           /* letter-spacing: 2.65px; */
           line-height: 1.13;">
       </div>
-      <div id="frameText2" class="text-left MontserratBlack"
+      <div id="frameText2" class="text-left MontserratBold"
         data-text="frameText2"
         style="top: 70px;
           left: 623px;
@@ -66,7 +71,7 @@
           /* letter-spacing: 2.65px; */
           line-height: 1.13;">
       </div>
-      <div id="frameText3" class="text-left MontserratBlack"
+      <div id="frameText3" class="text-left MontserratBold"
         data-text="frameText3"
         style="top: 70px;
           left: 623px;
@@ -76,7 +81,7 @@
           /* letter-spacing: 2.65px; */
           line-height: 1.13;">
       </div>
-      <div id="cta" class="text MontserratBlack"
+      <div id="cta" class="text MontserratBold"
         data-text="ctaText"
         data-style="padding:2px 20px 0px;"
         style="top: 193px;
@@ -93,7 +98,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratBlack">MontserratBlack</div>
+      <div class="MontserratBold">MontserratBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
