--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/PaoliPeaks/320x50_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/PaoliPeaks/320x50_PaoliPeaks.htm
@@ -124,7 +124,7 @@
       </div>
       <div id="cta" class="text"
         data-text="ctaText"
-        data-style="padding:0 6px 0px;"
+        data-style="padding:1px 6px 0px;"
         style="top: 17px;
           left: 256px;
           width: 55px;
@@ -477,7 +477,15 @@
                   }
                 }
             });
-          
+
+            /*CTA Text Padding Change*/
+            let ctaElementSpan = document.querySelector('#cta span');
+            if(adData['brandName'].replace(/ /g,'').toLowerCase() == 'attitash'
+                || adData['brandName'].replace(/ /g,'').toLowerCase() == 'crotched'){
+                  
+              ctaElementSpan.style.paddingTop = '0';
+            }
+            /**********/
 
           ad.root.addEventListener("click", function(e) {
             if('button' in e.target.dataset) { } else { amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
